--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=LibraryManagementSystem
 spring.datasource.url=jdbc:mysql://localhost:3306/LibraryManagement
 spring.datasource.username=root
-spring.datasource.password=328GabbaBest
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
